...

    <!-- RecyclerView per la lista dei budget -->

    <!-- Bottone per aggiungere un nuovo budget, posizionato leggermente più in alto -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewBudgets"
        android:layout_width="413dp"
        android:layout_height="358dp"
        app:layout_constraintBottom_toTopOf="@id/buttonAddBudget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleBudgetManagement"
        app:layout_constraintVertical_bias="0.0" />

    <Button
...
