<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Importo"
        android:inputType="numberDecimal" />

    <RadioGroup
        android:id="@+id/radioGroupTransactionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Entrata" />

        <RadioButton
            android:id="@+id/radioButtonExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Uscita" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OK"
        android:layout_marginTop="16dp" />
</LinearLayout>
