<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <!-- TextView to show the total balance -->
    <TextView
        android:id="@+id/textViewTotalBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Saldo Totale: €0.00"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="14dp" />

    <!-- Titolo per la sezione delle transazioni -->
    <TextView
        android:id="@+id/titleTransactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Transazioni"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/textViewTotalBalance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- RecyclerView for recent expenses -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewExpenses"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTransactions"
        tools:listitem="@layout/item_expense" />

    <!-- FloatingActionButton to add new transactions -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
